--- a/.github/workflows/deployapp.yml
+++ b/.github/workflows/deployapp.yml
@@ -32,7 +32,8 @@ jobs:
           # grep -E will matches files having .py extension
           # This command will help to pass required python files to pylint along with pylint_djanog plugin
           # Pylint with -E option will display only if there is any error
-          git ls-files | grep -v 'migrations' | grep -v 'settings.py' | grep -v 'manage.py' | grep -E '.py$'
+          git ls-files | grep -v 'migrations' | grep -v 'settings.py' | grep -v 'manage.py' | grep -E '.py$' |
+            xargs pylint -E --load-plugins=pylint_django
       - name: Test
         run: |
           pytest
