--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,37 @@
 asgiref==3.2.10
+astroid==2.4.2
+attrs==20.3.0
+coverage==5.3.1
 dj-database-url==0.5.0
-Django==3.0.9
+Django==3.0.5
 django-heroku==0.3.1
-djangorestframework==3.9.1
+django-rest-framework-mongoengine==3.4.1
+djangorestframework==3.12.2
+djongo==1.3.3
 gunicorn==20.0.4
+importlib-metadata==3.3.0
+iniconfig==1.1.1
+isort==5.6.4
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+mongoengine==0.22.1
+packaging==20.8
+pluggy==0.13.1
 psycopg2==2.7.7
 psycopg2-binary==2.7.7
+py==1.10.0
+pylint==2.6.0
+pylint-django==2.3.0
+pylint-plugin-utils==0.6
+pymongo==3.11.2
+pyparsing==2.4.7
+pytest==6.2.1
 pytz==2020.1
-sqlparse==0.3.1
+six==1.15.0
+sqlparse==0.2.4
+toml==0.10.2
+typed-ast==1.4.1
+typing-extensions==3.7.4.3
 whitenoise==5.2.0
+wrapt==1.12.1
+zipp==3.4.0
