config logger DB

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,6 @@
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = demo-server.settings
-python_files = myapp/**/*test.py
-addopts = --cov=myapp --cov-report=html
+python_files = /**/*test.py
 
 [coverage:report]
 omit =
