--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
 asgiref==3.2.10
 astroid==2.4.2
 attrs==20.3.0
+autobahn==21.3.1
+Automat==20.2.0
+bingo==0.1.15
+cffi==1.14.5
+channels==3.0.3
+constantly==15.1.0
 coverage==5.3.1
+cryptography==3.4.7
+daphne==3.0.2
 dj-database-url==0.5.0
 Django==3.0.5
 django-heroku==0.3.1
@@ -9,7 +17,10 @@ django-rest-framework-mongoengine==3.4.1
 djangorestframework==3.12.2
 djongo==1.3.3
 gunicorn==20.0.4
+hyperlink==21.0.0
+idna==3.2
 importlib-metadata==3.3.0
+incremental==21.3.0
 iniconfig==1.1.1
 isort==5.6.4
 lazy-object-proxy==1.4.3
@@ -20,18 +31,26 @@ pluggy==0.13.1
 psycopg2==2.7.7
 psycopg2-binary==2.7.7
 py==1.10.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
 pylint==2.6.0
 pylint-django==2.3.0
 pylint-plugin-utils==0.6
 pymongo==3.11.2
+pyOpenSSL==20.0.1
 pyparsing==2.4.7
 pytest==6.2.1
 pytz==2020.1
+service-identity==21.1.0
 six==1.15.0
 sqlparse==0.2.4
 toml==0.10.2
+Twisted==21.2.0
+txaio==21.2.1
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
 whitenoise==5.2.0
 wrapt==1.12.1
 zipp==3.4.0
+zope.interface==5.4.0
